<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C3E1EC"
    android:weightSum="4"
    tools:context="edu.bme3890.lupuslabs.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C3E1EC"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/app_logo2" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:textColor="#000000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc"
            android:visibility="gone"/>

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#95CCF0"
            android:onClick="openAboutUsActivity"
            android:text="@string/about_us"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/forgotPwdButton"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:background="#95CCF0"
            android:onClick="openForgotPasswordActivity"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/openMainMenuButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="#95CCF0"
            android:onClick="openMainMenuActivity"
            android:text="@string/go_to_main_menu"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1F71A1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#CDCCCC" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#CDCCCC" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:background="#95CCF0"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/createAccButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:background="#95CCF0"
                android:text="@string/create_account"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:background="#95CCF0"
                android:text="@string/sign_out"
                android:textColor="#FFFFFF"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/verifyEmailButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:background="#95CCF0"
                android:text="@string/verify_email"
                android:textColor="#FFFFFF"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/reloadButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:background="#95CCF0"
                android:text="@string/reload"
                android:textColor="#FFFFFF"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>