<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3E1EC"
    tools:context="edu.bme3890.lupuslabs.GraphActivity">

    <ImageView
        android:id="@+id/mgdL2000ImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/protein2000" />

    <ImageView
        android:id="@+id/mgdL300ImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819"
        app:srcCompat="@drawable/protein300" />

    <ImageView
        android:id="@+id/mgdL100ImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/protein100" />

    <ImageView
        android:id="@+id/mgdL30ImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819"
        app:srcCompat="@drawable/protein30" />

    <ImageView
        android:id="@+id/negativeImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/proteinnegative" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="200dp"
        android:layout_height="187dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="198dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:scaleType="centerInside"
        app:srcCompat="@android:drawable/btn_star_big_on"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="198dp"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/image_size"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imageSizeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/empty"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/region_of_interest"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/cropAreaImageView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/cropAreaImageView2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <ImageView
            android:id="@+id/cropAreaImageView3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <ImageView
            android:id="@+id/cropAreaImageView4"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:srcCompat="@android:drawable/btn_star_big_off"/>

        <Button
            android:id="@+id/runTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#95CCF0"
            android:onClick="createGraph"
            android:text="@string/run_test"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:background="#95CCF0"
        android:onClick="openEmailActivity"
        android:text="Send Results"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <ImageView
        android:id="@+id/mgdL15ImageView"
        android:layout_width="30dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/protein15" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

</androidx.constraintlayout.widget.ConstraintLayout>